--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   wordpress:
@@ -16,7 +15,7 @@ services:
       - wp_network
 
   db:
-    image: mysql:5.7
+    image: mariadb:10.5
     container_name: wp_declarative_db
     environment:
       MYSQL_DATABASE: ${DB_NAME}
